--- a/app/views/index/index2.html.erb
+++ b/app/views/index/index2.html.erb
@@ -34,7 +34,7 @@
   <div class="video-container">
     <div class="title-container">
       <div class="headline">
-        <h1>Welcome to our Company</h1>
+        <h1><%=t('index.hello')%></h1>
 
       </div>
       <div class="description">
@@ -49,59 +49,11 @@
     </div>
   </div>
 </div>
+
 <div class="container" id="content">
-  <!-- Example row of columns -->
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-      </p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-      </p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-      </p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-      <p>
-        <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-      </p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-      </p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p>
-        <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-      </p>
-    </div>
-  </div>
+  <%= render partial: "list_restaurant" %>
   <hr>
   <footer>
-    <p>&copy; Company 2014</p>
+    <p>&copy; zhu.com 2016</p>
   </footer>
 </div>
-<!-- /container -->
