--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -67,32 +67,32 @@ body {
     }
 }
 
-#enter {
-    position: fixed;
-    z-index: 100;
-    right: 3em;
-    bottom: 3em;
-    opacity: 0;
-    transition: opacity 9.3s;
-    -webkit-transition: opacity 9.3s;
-    -moz-transition: opacity 9.3s;
-    -ms-transition: opacity 9.3s;
-    -o-transition: opacity 9.3s;
+/*#enter {*/
+    /*position: fixed;*/
+    /*z-index: 100;*/
+    /*right: 3em;*/
+    /*bottom: 3em;*/
+    /*opacity: 0;*/
+    /*transition: opacity 9.3s;*/
+    /*-webkit-transition: opacity 9.3s;*/
+    /*-moz-transition: opacity 9.3s;*/
+    /*-ms-transition: opacity 9.3s;*/
+    /*-o-transition: opacity 9.3s;*/
 
-    overflow:visible;
-}
+    /*overflow:visible;*/
+/*}*/
 
-#enter img {
-    -moz-transition: all 1s ease-out;
-    -o-transition: all 1s ease-out;
-    -webkit-transition: all 1s ease-out;
-}
+/*#enter img {*/
+    /*-moz-transition: all 1s ease-out;*/
+    /*-o-transition: all 1s ease-out;*/
+    /*-webkit-transition: all 1s ease-out;*/
+/*}*/
 
-#enter img:hover{
-    -webkit-transform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -o-transform: scale(1.3);
-}
+/*#enter img:hover{*/
+    /*-webkit-transform: scale(1.3);*/
+    /*-moz-transform: scale(1.3);*/
+    /*-o-transform: scale(1.3);*/
+/*}*/
 
 a:hover {
     background-color: transparent;
