--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,4 +1,182 @@
-<%= javascript_include_tag 'restaurants' %>
+<script>
+    /** Document Ready Functions **/
+    /********************************************************************/
+
+    $( document ).ready(function() {
+
+        // Resive video
+        scaleVideoContainer();
+
+        initBannerVideoSize('.video-container .poster img');
+        initBannerVideoSize('.video-container .filter');
+        initBannerVideoSize('.video-container video');
+
+        $(window).on('resize', function() {
+            scaleVideoContainer();
+            scaleBannerVideoSize('.video-container .poster img');
+            scaleBannerVideoSize('.video-container .filter');
+            scaleBannerVideoSize('.video-container video');
+        });
+
+    });
+
+    /** Reusable Functions **/
+    /********************************************************************/
+    function scaleVideoContainer() {
+        var height = $(window).height();
+        var unitHeight = parseInt(height) + 'px';
+        $('.homepage-hero-module').css('height', unitHeight);
+    }
+
+    function initBannerVideoSize(element){
+        $(element).each(function(){
+            $(this).data('height', $(this).height());
+            $(this).data('width', $(this).width());
+        });
+        scaleBannerVideoSize(element);
+    }
+
+    function scaleBannerVideoSize(element){
+
+        var windowWidth = $(window).width(),
+            windowHeight = $(window).height(),
+            videoWidth,
+            videoHeight;
+
+        $(element).each(function(){
+            var videoAspectRatio = $(this).data('height')/$(this).data('width'),
+                windowAspectRatio = windowHeight/windowWidth;
+
+            if (videoAspectRatio > windowAspectRatio) {
+                videoWidth = windowWidth;
+                videoHeight = videoWidth * videoAspectRatio;
+                $(this).css({'top' : -(videoHeight - windowHeight) / 2 + 'px', 'margin-left' : 0});
+            } else {
+                videoHeight = windowHeight;
+                videoWidth = videoHeight / videoAspectRatio;
+                $(this).css({'margin-top' : 0, 'margin-left' : -(videoWidth - windowWidth) / 2 + 'px'});
+            }
+
+            $(this).width(videoWidth).height(videoHeight);
+
+            $('.homepage-hero-module .video-container video').addClass('fadeIn animated');
+
+
+        });
+    }
+</script>
+
+<style type="text/css">
+
+    .homepage-hero-module {
+        border-right: none;
+        border-left: none;
+        position: relative;
+    }
+
+    .no-video .video-container video,
+    .touch .video-container video {
+        display: none;
+    }
+    .no-video .video-container .poster,
+    .touch .video-container .poster {
+        display: block !important;
+    }
+    .video-container {
+        position: relative;
+        bottom: 0%;
+        left: 0%;
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+        background: #000;
+    }
+    .video-container .poster img {
+        width: 100%;
+        bottom: 0;
+        position: absolute;
+    }
+    .video-container .filter {
+        z-index: 100;
+        position: absolute;
+        background: rgba(0, 0, 0, 0.4);
+        width: 100%;
+    }
+    .video-container .title-container {
+        z-index: 1000;
+        position: absolute;
+        top: 35%;
+        width: 100%;
+        text-align: center;
+        color: #fff;
+    }
+    .video-container .description .inner {
+        font-size: 1em;
+        width: 45%;
+        margin: 0 auto;
+    }
+    .video-container .link {
+        position: absolute;
+        bottom: 3em;
+        width: 100%;
+        text-align: center;
+        z-index: 1001;
+        font-size: 2em;
+        color: #fff;
+    }
+    .video-container .link a {
+        color: #fff;
+    }
+    .video-container video {
+        position: absolute;
+        z-index: 0;
+        bottom: 0;
+    }
+    .video-container video.fillWidth {
+        width: 100%;
+    }
+
+
+
+
+    /*в индексе css -  enter*/
+
+    #enter img {
+        -moz-transition: all 1s ease-out;
+        -o-transition: all 1s ease-out;
+        -webkit-transition: all 1s ease-out;
+    }
+
+    #enter img:hover{
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -o-transform: scale(1.1);
+    }
+
+
+
+
+
+    /* Для небольших устройств (смартфоны) */
+    img {
+        max-width: 100%;
+        display: inline-block;
+    }
+    /* Для средних устройств (планшеты) */
+    @media (min-width: 420px) {
+        img {
+            max-width: 48%;
+        }
+    }
+    /* Для больших устройств (ноуты, пк) */
+    @media (min-width: 760px) {
+        img {
+            max-width: 100%;
+        }
+    }
+</style>
+
+
 
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
@@ -13,9 +191,9 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav pull-right">
-        <li class="active"><a href="#">Services</a>
+        <li class="active"><a href="#">Servces</a>
         </li>
-        <li class="active"><a href="#">Sectors</a>
+        <li class="active"><a href="#">Bag</a>
         </li>
         <li class="active"><a href="#">News</a>
         </li>
@@ -28,6 +206,7 @@
     <!--/.navbar-collapse -->
   </div>
 </div>
+
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="homepage-hero-module">
   <div class="video-container">
@@ -37,12 +216,17 @@
 
       </div>
       <div class="description">
-        <div class="inner">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</div>
+        <div class="inner"><%=t('index.hello')%></div>
       </div>
     </div>
     <div class="filter"></div>
     <video autoplay loop class="fillWidth">
-      <source src="video/restoraunt.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.</video>
+      <source src="video/restoraunt.mp4" type="video/mp4" />
+      <source src="video/restoraunt.webm" type="video/webm">
+      Your browser does not support the video tag. I suggest you upgrade your browser.</video>
+    <div class="poster hidden">
+      <img src="/restaurants/chester.jpg" alt="">
+    </div>
   </div>
 </div>
 
